2005-10-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/compile-vars.make (SHARED_FLAGS): Support mingw.

	* stepmake/stepmake/generic-vars.make (MINGW_BUILD): Detect mingw
	cross compiling.

	* stepmake/aclocal.m4: Support python cross compiling.

	* stepmake/stepmake/python-module-vars.make (SHARED_MODULE_SUFFIX):
	Add mingw section.

2005-10-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4 (STEPMAKE_PYTHON_DEVEL): Fixes for cross
	compilation.  Add --with-python-include, --with-python-lib
	options.

	* stepmake/stepmake/shared-library-vars.make (ALL_LDFLAGS): Add
	MINGW section.  Update CYGWIN section.

	* stepmake/stepmake/generic-vars.make: Add MINGW_BUILD.

2005-10-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm: Remove horrendous running-from-gui? kludge.
	(lilypond-main): Redirect to gui-main if 'gui is set.

	* scripts/midi2ly.py (datadir): Add libdir iso datadir to path,
	for alternative installations kludging s/share/lib/g
	LILYPONDPREFIX.

	* SConstruct (libdir_package_version): Define.

	* python/SConscript: 
	* python/GNUmakefile (INSTALLATION_OUT_DIR): Install binary .so
	module in libdir.

2005-10-23  Erik Sandberg  <mandolaerik@gmail.com>

	* scripts/lilypond-book.py: Backport bugfix by Mats Bengtsson.

2005-10-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/postinstall-lilypond.sh: Remove cruft.

	* cygwin/postremove-lilypond.sh: Remove.

	* cygwin/GNUmakefile (default): Remove postremove rules.

2005-10-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/hara-kiri-group-spanner.cc (consider_suicide): backport:
	only consider break_index for broken spanner.  

2005-10-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/python-module-rules.make
	($(outdir)/%$(SHARED_MODULE_SUFFIX)): put flags after files.

2005-10-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/ps-to-png.scm (make-ps-images): backport: make PS images
	without globbing. 

2005-10-09  Jan Nieuwenhuizen  <janneke@gnu.org>
